fix: scroll align in dialog

--- a/src/Pages/Chat/Dialog/Dialog.scss
+++ b/src/Pages/Chat/Dialog/Dialog.scss
@@ -5,6 +5,7 @@
   padding: 10px 5px;
   overscroll-behavior-y: contain;
   scroll-snap-type: y proximity;
+  scroll-padding: 10px;
   &-message:last-child {
     scroll-snap-align: end;
     margin-bottom: 20px;
